--- a/index.html
+++ b/index.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Memory Game!</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>Memory Game!</h1>
-    <div id="lowest-score">
-      <h2 id="low-score">0</h2>
-      <h3>Lowest Score</h3>
-    </div>
-    <div id="score-box">
-      <h2 id="score">0</h2>
-      <h3>SCORE</h3>
-    </div>
-    <button id="start">Start Game</button>
-    <div id="game">
-    </div>
-    <div id='play'>
-    </div>
-    <script src="script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Memory Game!</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+
+  <h1>Memory Game!</h1>
+
+  <div id="lowest-score">
+    <h2 id="low-score">0</h2>
+    <h3>Lowest Score</h3>
+  </div>
+
+  <div id="score-box">
+    <h2 id="score">0</h2>
+    <h3>SCORE</h3>
+  </div>
+
+  <button id="start">Start Game</button>
+  <!-- <form>
+    <label>Number Of Tiles</label>
+
+    <input type="number" name="tile-count" id='tile'>
+    <input type="submit" id="start">
+    <button type="submit" id="start">Start Game</button>
+  </form> -->
+  <!-- <label>Number Of Tiles</label>
+
+  <input type="number" name="tile-count" id='tile-count'> -->
+
+  <div id="game"></div>
+
+  <div id='play'></div>
+  <script src="helpers.js"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
- 
